# way-clicker

./: LICENSE  README.md  pyproject.toml
way_clicker/: __main__.py  backend.py  clicker.py  config.py  ipc.py  main_window.py  settings_dialog.py
